--- a/.github/workflows/schedule_sync.yml
+++ b/.github/workflows/schedule_sync.yml
@@ -3,7 +3,7 @@ name: Run Tado-Octopus Script
 on:
   schedule:
     # Runs every Wednesday at 12pm UTC
-    - cron: '0 0 * * *' ```
+    - cron: '0 0 * * *' 
 
 jobs:
   run_script:
